--- a/src/css/style.css
+++ b/src/css/style.css
@@ -51,7 +51,7 @@ header{
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
-    width: 50%;
+    width: 52%;
 }
 
 .links a{
@@ -71,4 +71,94 @@ header{
 .theme__modes img{
     width: 35px;
     height: 35px;
+}
+
+/************MAIN************/
+
+main{
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    background-color: var(--color-3);
+}
+
+#inicio{
+    display: flex;
+    flex-direction: row;
+    margin: 63px 100px;
+    align-items: center;
+    justify-content: space-between;
+}
+.main__title{
+    display: flex;
+    flex-direction: column;
+    width: 57%;
+    color: var(--color-1);
+    gap: 26px;
+}
+
+.main__title img{
+    width: 100%;
+}
+
+.main__title h2{
+    font-size: 57px;
+    width: 100%;
+    font-family: "RobotoCondensed-Regular";
+}
+
+.main__title p{
+    font-size: 26px;
+    font-family: "RobotoCondensed-Regular";
+    font-weight: 100;
+}
+
+.buying{
+    display: flex;
+    flex-direction: column;
+    width: 30%;
+    align-items: center;
+}
+
+.comprar{
+    display: flex;
+    flex-direction: row;
+    width: fit-content;
+    padding: 4px 28px;
+    border-radius: 25px;
+    align-items: center;
+    gap: 4px;
+    background-color: var(--color-1);
+    margin-left: 70px;
+
+}
+
+.comprar img{
+    width: 36px;
+    height: 36px;
+}
+
+.comprar b{
+    font-size: 40px;
+    font-family:  "RobotoCondensed-Bold";
+    color: var(--color-2);
+}
+
+.main__image{
+    width: 100%;
+    height: 100%;
+    transform: rotate(13.36deg) translateY(-12%);
+}
+
+.social__media{
+    display: flex;
+    flex-direction: column;
+    margin-top: 400px;
+}
+
+.social__media img{
+    width: 100%;
+    max-width: 62px;
+    height: 62px;
 }
